drawer to show current user info

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@ html, body {
   font-family: 'Montserrat', sans-serif !important;
 }
 
+/* Hide the development mode text */
 .cl-internal-1dauvpw {
   display: none !important;
 }
